<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 <PreferenceCategory
   android:title="@string/catpref_title_filter"
   android:summary="@string/catpref_summary_filter" >
     <ListPreference
             android:key="hook_type"
             android:title="@string/pref_title_hook_type"
             android:summary="@string/pref_summary_hook_type"
             android:entries="@array/hook_type_options"
             android:entryValues="@array/hook_type_options_alias"
             android:defaultValue="@string/hook_type_default"/>
   <ListPreference 
    android:key="filter_type"
    android:title="@string/pref_title_filter_type"
    android:summary="@string/pref_summary_filter_type"
    android:entries="@array/filter_type_options"
    android:entryValues="@array/filter_type_options_alias"
    android:defaultValue="@string/filter_type_default"/>
   <EditTextPreference
    android:key="filter_size"
    android:title="@string/pref_title_filter_size"
    android:summary="@string/pref_summary_filter_size"
    android:numeric="integer"
    android:maxLength="4"
    android:defaultValue="@string/filter_size_default"
	/>
   <EditTextPreference
    android:key="filter_alpha"
    android:title="@string/pref_title_filter_alpha"
    android:summary="@string/pref_summary_filter_alpha"
    android:maxLength="5"
    android:defaultValue="@string/filter_alpha_default"
	/>
 </PreferenceCategory>

 <PreferenceCategory
   android:title="@string/catpref_title_other"
   android:summary="@string/catpref_summary_other" >
   <EditTextPreference
    android:key="filter_min_change"
    android:title="@string/pref_title_filter_min_change"
    android:summary="@string/pref_summary_filter_min_change"
    android:maxLength="15"
    android:defaultValue="@string/filter_min_change_default"
	/>
   <EditTextPreference
    android:key="filter_stationary_min_change"
    android:title="@string/pref_title_filter_stationary_min_change"
    android:summary="@string/pref_summary_filter_stationary_min_change"
    android:maxLength="15"
    android:defaultValue="@string/filter_stationary_min_change_default"
	/>
   <EditTextPreference
    android:key="filter_round_precision"
    android:title="@string/pref_title_filter_round_precision"
    android:summary="@string/pref_summary_filter_round_precision"
    android:numeric="integer"
    android:maxLength="15"
    android:defaultValue="@string/filter_round_precision_default"
	/>
 </PreferenceCategory>
</PreferenceScreen>
